# config-adapter

./: README.md  pyproject.toml
.github/workflows/: bandit.yml  mypy.yml  ruff.yml  tests.yml
config-adapter/examples/: dataclass_example.py  example.py  pydantic_example.py
config-adapter/src/config_adapter/: __init__.py  generate_model.py  output_type.py
config-adapter/src/config_adapter/input/: apply_strategy.py  default.py  dict.py  input_strategy.py  json.py  typing.py  yaml.py
config-adapter/src/config_adapter/loading/: __init__.py  apply_strategy.py  default.py  dict.py  input_strategy.py  json.py  typing.py  yaml.py
config-adapter/src/config_adapter/model_generation/: __init__.py  dataclass.py  default.py  get_strategy.py  model_generation.py  model_registry.py  output_type.py  pydantic.py
config-adapter/src/config_adapter/model_generation/strategies/: __init__.py  dataclass.py  model_generation.py  pydantic.py
config-adapter/src/config_adapter/model_generation/strategies/util/: model.py  model_registry.py  to_pascal_case.py
config-adapter/src/config_adapter/model_generation/util/: __init__.py  to_pascal_case.py
config-adapter/tests/: test_data_model.py  test_dict_loader.py  test_model.py  test_to_pascal_case.py
